[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "envguard"
version = "0.1.0"
description = "Validate and audit .env files against a schema definition"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["env", "dotenv", "validation", "cli", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
envguard = "envguard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tbnsource = ["envguard"]
omit = ["tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80
